--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 </head>
 <body>
   <div align="center">
-    <h1>Congratulations</h1>
+    <h1>UPDATED</h1>
+    <h1>INDEX.HTML WAS UPDATED AND COMMITED. THE CAHNGE HAS BEEN SUCCESSFULLY DEPLOYED<h1>
+     <h1> PIPELINE WORKING <h1>
     <h2>This application was deployed using AWS CodeDeploy.</h2>
     <p>For next steps, read the <a href="http://aws.amazon.com/documentation/codedeploy">AWS CodeDeploy Documentation</a>.</p>
   </div>
